--- a/challenge-react/.eslintrc
+++ b/challenge-react/.eslintrc
@@ -4,9 +4,7 @@
     "browser": true,
     "node": true
   },
-  "plugins": [
-    "react"
-  ],
+  "plugins": ["react"],
   "rules": {
     "quotes": [2, "single"],
     "prefer-const": 2,
@@ -20,13 +18,18 @@
     "no-param-reassign": 2,
     "prefer-arrow-callback": 0,
     "arrow-spacing": 1,
-    "indent": ["error", 2, {"SwitchCase": 1}],
     "space-before-blocks": 1,
     "keyword-spacing": 1,
     "comma-dangle": [1, "always-multiline"],
     "camelcase": 0,
     "no-dupe-keys": 1,
-    "no-unused-vars": [1, { "vars": "local", "args": "none" }],
+    "no-unused-vars": [
+      1,
+      {
+        "vars": "local",
+        "args": "none"
+      }
+    ],
     "no-use-before-define": [1, "nofunc"],
     "react/jsx-uses-react": 1,
     "react/jsx-uses-vars": 1,
