--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -3,34 +3,39 @@
   "version": "1.0.0",
   "description": "Test Omise code challenge for frontend developer",
   "main": "src/index.js",
-  "repository": "git@git.omise.co:ratchagarn/tamboon-react.git",
-  "author": "Ratchagarn Naewbuntad <ratchagarn@omise.co>",
+  "repository": "git@github.com:omiselabs/frontend-code-challenges.git",
+  "author": "Ratchagarn Naewbuntad <ratchagarn@omise.co>, Andy D. Ng <andy@opn.ooo>",
   "license": "MIT",
   "scripts": {
     "server": "json-server --watch db.json --port 3001",
-    "client": "webpack-dev-server",
+    "client": "webpack serve",
     "test": "jest"
   },
   "dependencies": {
-    "isomorphic-fetch": "^2.2.1",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
-    "styled-components": "^2.2.1"
+    "isomorphic-fetch": "^3.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5",
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
-    "babel-eslint": "^8.0.1",
-    "babel-loader": "^7.1.2",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/preset-react": "^7.12.10",
+    "@babel/runtime": "^7.12.5",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^4.18.2",
-    "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1",
-    "json-server": "^0.12.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
+    "html-webpack-plugin": "^4.5.1",
+    "jest": "^26.6.3",
+    "json-server": "^0.16.3",
+    "webpack": "^5.14.0",
+    "webpack-cli": "^4.3.1",
+    "webpack-dev-server": "^3.11.2"
   }
 }
