--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -7,6 +7,7 @@
   "author": "Ratchagarn Naewbuntad <ratchagarn@omise.co>, Andy D. Ng <andy@opn.ooo>",
   "license": "MIT",
   "scripts": {
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "json-server --watch db.json --port 3001",
     "client": "webpack serve",
     "test": "jest"
@@ -29,6 +30,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "concurrently": "5.3.0",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^4.5.1",
