style: Update .eslintrc
- Specific an indent to 4 space
- Code adjustment with the new indent

--- a/challenge-react/.eslintrc
+++ b/challenge-react/.eslintrc
@@ -8,6 +8,7 @@
   "rules": {
     "quotes": [2, "single"],
     "prefer-const": 2,
+    "indent": ["error", 4],
     "no-const-assign": 2,
     "no-var": 2,
     "no-array-constructor": 1,
