--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -10,7 +10,8 @@
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "json-server --watch db.json --port 3001",
     "client": "webpack serve",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "isomorphic-fetch": "^3.0.0",
