--- a/challenge-react/.eslintrc
+++ b/challenge-react/.eslintrc
@@ -9,6 +9,7 @@
     "quotes": [2, "single"],
     "prefer-const": 2,
     "indent": ["error", 4],
+    "semi": ["error", "never"],
     "no-const-assign": 2,
     "no-var": 2,
     "no-array-constructor": 1,
