--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
-    "isomorphic-fetch": "^3.0.0",
+    "axios": "0.21.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -34,6 +34,7 @@
     "concurrently": "5.3.0",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
+    "faker": "5.1.0",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "json-server": "^0.16.3",
