fix: Remove unused console
- Add .eslintrc rule about console

--- a/challenge-react/.eslintrc
+++ b/challenge-react/.eslintrc
@@ -10,6 +10,7 @@
     "prefer-const": 2,
     "indent": ["error", 4],
     "semi": ["error", "never"],
+    "no-console": ["error"],
     "no-const-assign": 2,
     "no-var": 2,
     "no-array-constructor": 1,
