--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -15,8 +15,8 @@
   },
   "dependencies": {
     "axios": "0.21.1",
-    "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
+    "dotenv-flow": "3.2.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
