refactor: Refactor using @reduxjs/toolkit and functional component
- Using @reduxjs/toolkit instead of plain redux
- Using functional component instead of class component
- Add proces.env.NODE_ENV
- Implement donation hooks to reduce business logic in layout

--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -14,6 +14,7 @@
     "lint": "eslint . --ext .js"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.5.0",
     "axios": "0.21.1",
     "dotenv-expand": "5.1.0",
     "dotenv-flow": "3.2.0",
