--- a/challenge-react/.babelrc
+++ b/challenge-react/.babelrc
@@ -1,5 +1,10 @@
 {
-  "presets": ["@babel/env", "@babel/react"],
+  "presets": [
+    ["@babel/preset-env", {
+      "targets": { "browsers": ["last 2 chrome versions"] }
+    }],
+    "@babel/preset-react"
+  ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import"
