--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -18,11 +18,13 @@
     "axios": "0.21.1",
     "dotenv-expand": "5.1.0",
     "dotenv-flow": "3.2.0",
+    "lodash": "4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-normalize": "8.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -41,6 +43,7 @@
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "json-server": "^0.16.3",
+    "prop-types": "15.7.2",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
