--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -22,9 +22,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-router-dom": "5.2.0",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
-    "styled-normalize": "8.0.7"
+    "styled-normalize": "8.0.7",
+    "styled-system": "5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
