--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "1.5.0",
+    "@styled-icons/material": "10.26.0",
     "axios": "0.21.1",
     "dotenv-expand": "5.1.0",
     "dotenv-flow": "3.2.0",
