--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -22,6 +22,7 @@
     "lodash": "4.17.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "6.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "5.2.0",
     "redux": "^4.0.5",
