--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -25,6 +25,7 @@
     "react-helmet": "6.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "5.2.0",
+    "react-select": "4.0.2",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1",
     "styled-normalize": "8.0.7",
