--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -21,6 +21,7 @@
     "dotenv-flow": "3.2.0",
     "lodash": "4.17.20",
     "react": "^17.0.1",
+    "react-content-loader": "6.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "6.1.0",
     "react-redux": "^7.2.2",
