--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -17,6 +17,8 @@
     "@reduxjs/toolkit": "1.5.0",
     "@styled-icons/material": "10.26.0",
     "axios": "0.21.1",
+    "classnames": "2.2.6",
+    "cogo-toast": "4.2.3",
     "dotenv-expand": "5.1.0",
     "dotenv-flow": "3.2.0",
     "lodash": "4.17.20",
