--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -23,6 +23,7 @@
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
@@ -34,6 +35,7 @@
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "json-server": "^0.16.3",
+    "url-loader": "^4.1.1",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
