--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -7,17 +7,33 @@
   "author": "Ratchagarn Naewbuntad <ratchagarn@omise.co>, Andy D. Ng <andy@opn.ooo>",
   "license": "MIT",
   "scripts": {
+    "start": "concurrently \"npm run server\" \"npm run client\"",
     "server": "json-server --watch db.json --port 3001",
     "client": "webpack serve",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
-    "isomorphic-fetch": "^3.0.0",
+    "@loadable/component": "5.14.1",
+    "@reduxjs/toolkit": "1.5.0",
+    "@styled-icons/material": "10.26.0",
+    "axios": "0.21.1",
+    "classnames": "2.2.6",
+    "cogo-toast": "4.2.3",
+    "dotenv-expand": "5.1.0",
+    "dotenv-flow": "3.2.0",
+    "lodash": "4.17.20",
     "react": "^17.0.1",
+    "react-content-loader": "6.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "6.1.0",
     "react-redux": "^7.2.2",
+    "react-router-dom": "5.2.0",
+    "react-select": "4.0.2",
     "redux": "^4.0.5",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-normalize": "8.0.7",
+    "styled-system": "5.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -29,11 +45,14 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "concurrently": "5.3.0",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
+    "faker": "5.1.0",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "json-server": "^0.16.3",
+    "prop-types": "15.7.2",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
