--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-test-renderer": "^17.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1"
   },
