--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -7,11 +7,18 @@
   "author": "Ratchagarn Naewbuntad <ratchagarn@omise.co>, Andy D. Ng <andy@opn.ooo>",
   "license": "MIT",
   "scripts": {
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
     "server": "json-server --watch db.json --port 3001",
     "client": "webpack serve",
     "test": "jest"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/lab": "^4.0.0-alpha.57",
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
     "isomorphic-fetch": "^3.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -26,6 +33,7 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
     "@babel/runtime": "^7.12.5",
+    "@webpack-cli/serve": "^1.2.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
@@ -34,8 +42,8 @@
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "json-server": "^0.16.3",
-    "webpack": "^5.14.0",
-    "webpack-cli": "^4.3.1",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "^4.32.2",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.5.1"
   }
 }
