--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -9,15 +9,23 @@
   "scripts": {
     "server": "json-server --watch db.json --port 3001",
     "client": "webpack serve",
-    "test": "jest"
+    "dev": "concurrently yarn:server yarn:client",
+    "test": "jest",
+    "lint": "eslint . --ext .js,.jsx --fix",
+    "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
   },
   "dependencies": {
-    "isomorphic-fetch": "^3.0.0",
+    "@reduxjs/toolkit": "^1.5.0",
+    "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -25,15 +33,23 @@
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-react": "^7.12.10",
+    "@babel/register": "^7.13.8",
     "@babel/runtime": "^7.12.5",
+    "@loadable/component": "^5.14.1",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "eslint": "^7.17.0",
+    "concurrently": "^6.0.0",
+    "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
+    "dotenv-flow": "^3.2.0",
+    "eslint": "^7.21.0",
     "eslint-plugin-react": "^7.22.0",
     "html-webpack-plugin": "^4.5.1",
     "jest": "^26.6.3",
     "json-server": "^0.16.3",
+    "prettier": "^2.2.1",
+    "react-app-polyfill": "^2.0.0",
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
