--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -19,13 +19,14 @@
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "react": "^17.0.1",
+    "react-content-loader": "^6.0.2",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
+    "react-toast-notifications": "^2.4.3",
     "redux": "^4.0.5",
-    "styled-components": "^5.2.1",
-    "styled-normalize": "^8.0.7"
+    "styled-components": "^5.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
