--- a/challenge-react/.babelrc
+++ b/challenge-react/.babelrc
@@ -1,7 +1,17 @@
 {
-  "presets": ["@babel/env", "@babel/react"],
+  "presets": [
+    "@babel/env",
+    "@babel/react"
+  ],
   "plugins": [
     "@babel/plugin-proposal-class-properties",
     "@babel/plugin-syntax-dynamic-import"
-  ]
+  ],
+  "env": {
+    "test": {
+      "plugins": [
+        "@babel/plugin-transform-runtime"
+      ]
+    }
+  }
 }
