--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -4,7 +4,7 @@
   "description": "Test Omise code challenge for frontend developer",
   "main": "src/index.js",
   "repository": "git@github.com:omiselabs/frontend-code-challenges.git",
-  "author": "Ratchagarn Naewbuntad <ratchagarn@omise.co>, Andy D. Ng <andy@opn.ooo>",
+  "author": "Ratchagarn Naewbuntad <ratchagarn@omise.co>, Andy D. Ng <andy@opn.ooo>, Pitsanu L.",
   "license": "MIT",
   "scripts": {
     "server": "json-server --watch db.json --port 3001",
