1 use react hooks (#3)

--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -9,10 +9,14 @@
   "scripts": {
     "server": "json-server --watch db.json --port 3001",
     "client": "webpack serve",
-    "test": "jest"
+    "test": "jest",
+    "shallow": "yarn prettier -w ./src/*.js",
+    "deep": "yarn prettier -w ./src/**/*.{js,jsx}",
+    "fmt": "yarn shallow && yarn deep"
   },
   "dependencies": {
     "isomorphic-fetch": "^3.0.0",
+    "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
