--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "reset-css": "^5.0.1",
     "styled-components": "^5.2.1"
   },
   "devDependencies": {
