--- a/challenge-devops/Gemfile
+++ b/challenge-devops/Gemfile
@@ -2,6 +2,7 @@ source 'https://rubygems.org'
 git_source(:github) { |repo| "https://github.com/#{repo}.git" }
 ruby '2.6.3'
 gem 'rails'
+gem 'activerecord', '>= 6.0.3.5'
 gem 'sqlite3'
 gem 'puma'
 gem 'sass-rails'
