--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -12,22 +12,36 @@
     "test": "jest"
   },
   "dependencies": {
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "@types/react-redux": "^7.1.16",
+    "axios": "^0.21.1",
+    "babel-polyfill": "^6.26.0",
     "isomorphic-fetch": "^3.0.0",
+    "module-resolver": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.14.5",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.12.11",
-    "@babel/preset-react": "^7.12.10",
+    "@babel/preset-react": "^7.14.5",
     "@babel/runtime": "^7.12.5",
+    "@types/isomorphic-fetch": "^0.0.35",
+    "@types/styled-components": "^5.1.10",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "eslint": "^7.17.0",
     "eslint-plugin-react": "^7.22.0",
