--- a/challenge-react/package.json
+++ b/challenge-react/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "server": "json-server --watch db.json --port 3001",
-    "client": "webpack serve",
+    "client": "react-scripts start",
     "test": "jest"
   },
   "dependencies": {
@@ -16,6 +16,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.5",
     "styled-components": "^5.2.1"
   },
@@ -37,5 +38,17 @@
     "webpack": "^5.14.0",
     "webpack-cli": "^4.3.1",
     "webpack-dev-server": "^3.11.2"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
